barcamp.org (archived on 2007-12-27)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;education;informationtech",
  "char_count": 9542,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.7,
  "homepage_snapshot_redirected_domain": "barcamp.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071002222854id_/http://barcamp.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071002222854id_/http%3A//barcamp.org",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "pbwiki.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071227163925id_/http%3A//pbwiki.com/privacy.php",
  "policy_title": "Privacy Policy | PBwiki.com",
  "policy_url": "pbwiki.com/privacy.php",
  "sha1": "0b617a182a7cc187de20c50492a76774ded37f07",
  "simhash": 11842558380259639218,
  "simhash_updated": false,
  "site_hostname": "barcamp.org",
  "site_url": "http://barcamp.org",
  "smog": 16.36,
  "strict_updated": false,
  "timestamp": "20071227163925",
  "word_count": 1572,
  "year": 2007
}

--- a/b/ba/bar/barcamp.org.html
+++ b/b/ba/bar/barcamp.org.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the barcamp.org privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623105926id_/http%3A//pbwiki.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the barcamp.org privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227163925id_/http%3A//pbwiki.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
-<title>PBWiki :: Privacy</title>
+<title>Privacy Policy | PBwiki.com</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="keywords" lang="en-us" content="free wikis, make your own wiki,create your own wiki, personal wiki, wiki hosting, managed wiki, wiki, peanut butter, pbwiki, new wiki">
 <link rel="icon" href="/favicon.ico">
@@ -217,7 +217,7 @@ to contact us by email at privacy (at) pbwiki (D0T) com.
 		<li><a href="/help.php">Feedback</a> | </li>
 	</ul>
 	<div id="footer">
-		<p id="counter"><a href="http://pbwiki.com/public.php">150,000+ pbwikis made!</a> | <a href="http://pbwiki.com/faq.php">Got questions?</a></p>
+		<p id="counter"><a href="http://pbwiki.com/public.php">200,000+ pbwikis made!</a> | <a href="http://pbwiki.com/faq.php">Got questions?</a></p>
 		<p id="privacy"><a href="http://pbwiki.com/privacy.php">Privacy Policy</a> | <a href="http://pbwiki.com/tos.php">Terms of Service</a></p>
 	</div>
 <br>
