redrobin.com (archived on 2007-12-27)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 12173,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.72,
  "homepage_snapshot_redirected_domain": "redrobin.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001022631id_/http://www.redrobin.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001022631id_/http%3A//redrobin.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "redrobin.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071227173333id_/http%3A//www.redrobin.com/home/privacy-policy.aspx",
  "policy_title": "Red Robin - Privacy Policy",
  "policy_url": "redrobin.com/home/privacy-policy.aspx",
  "sha1": "01fe9eb40412aaefb88e496042e2ca93a0def868",
  "simhash": 11810348528891423456,
  "simhash_updated": false,
  "site_hostname": "redrobin.com",
  "site_url": "http://redrobin.com",
  "smog": 15.25,
  "strict_updated": false,
  "timestamp": "20071227173333",
  "word_count": 2046,
  "year": 2007
}

--- a/r/re/red/redrobin.com.html
+++ b/r/re/red/redrobin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the redrobin.com privacy policy that was archived on 2007-05-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070505170428id_/http%3A//redrobin.com/home/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redrobin.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227173333id_/http%3A//www.redrobin.com/home/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>Red Robin - Privacy Policy</title>
@@ -13,12 +13,12 @@
 <body>
 	<form name="aspnetForm" method="post" action="/home/privacy-policy.aspx" id="aspnetForm">
 <div>
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUENTM4MWRkBFNNRjwTKW6m/SMNr1HMQ45kwi4=">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUENTM4MWRk1rCoN2VIK5N2elI82dn0LdSaeYM=">
 </div>
 
 <script language="JavaScript" type="text/javascript" src="/detection/swfobject.js"></script>
 		<a name="top"></a>
-		<div id="Content" style="height:100%">
+		<div id="Content">
 			<!--  Masthead Module -->
 			<div style="width:813px;">
 				<div class="mastheadLeft"></div>
@@ -40,7 +40,7 @@ fo.write("locationsWidgetHtml");
 	<div style="position:relative; float:left; top:7px;"><div style="float:left; padding-left:36px;"><a id="p_ctl00_ribLocate" class="topMenuLink" onmouseover="document.p_ctl00_ribLocate_img.src='/Images/Shared/TopMenu/locateHover.jpg';" onmouseout="document.p_ctl00_ribLocate_img.src='/Images/Shared/TopMenu/locateNormal.jpg';" href="/redrobin/home/locate.aspx"><img name="p_ctl00_ribLocate_img" src="/Images/Shared/TopMenu/locateNormal.jpg" alt="Locate" style="border-width:0px;"></a></div>
 		<div style="float:left; padding-left:2px; padding-top:0px;"><a id="p_ctl00_ribMenu" class="topMenuLink" onmouseover="document.p_ctl00_ribMenu_img.src='/Images/Shared/TopMenu/menuHover.jpg';" onmouseout="document.p_ctl00_ribMenu_img.src='/Images/Shared/TopMenu/menuNormal.jpg';" href="/redrobin/home/menu.aspx"><img name="p_ctl00_ribMenu_img" src="/Images/Shared/TopMenu/menuNormal.jpg" alt="Menu" style="border-width:0px;"></a></div>
 	    <div style="float:left; padding-left:8px; "><a id="p_ctl00_ribAboutUs" class="topMenuLink" onmouseover="document.p_ctl00_ribAboutUs_img.src='/Images/Shared/TopMenu/aboutusHover.jpg';" onmouseout="document.p_ctl00_ribAboutUs_img.src='/Images/Shared/TopMenu/aboutusNormal.jpg';" href="/redrobin/home/about-us.aspx"><img name="p_ctl00_ribAboutUs_img" src="/Images/Shared/TopMenu/aboutusNormal.jpg" alt="About Us" style="border-width:0px;"></a></div>
-		<div style="float:left; padding-left:7px; "><a id="p_ctl00_ribFun" class="topMenuLink" onmouseover="document.p_ctl00_ribFun_img.src='/Images/Shared/TopMenu/funHover.jpg';" onmouseout="document.p_ctl00_ribFun_img.src='/Images/Shared/TopMenu/funNormal.jpg';" href="/redrobin/home/fun/kids-coloring-page.aspx"><img name="p_ctl00_ribFun_img" src="/Images/Shared/TopMenu/funNormal.jpg" alt="Coloring Page" style="border-width:0px;"></a></div>
+		<div style="float:left; padding-left:7px; "><a id="p_ctl00_ribFun" class="topMenuLink" onmouseover="document.p_ctl00_ribFun_img.src='/Images/Shared/TopMenu/funHover.jpg';" onmouseout="document.p_ctl00_ribFun_img.src='/Images/Shared/TopMenu/funNormal.jpg';" href="/redrobin/home/fun.aspx"><img name="p_ctl00_ribFun_img" src="/Images/Shared/TopMenu/funNormal.jpg" alt="Fun" style="border-width:0px;"></a></div>
 		<div style="float:left; padding-left:4px; position:relative; top:-18px; padding-top:0px;"><a id="p_ctl00_ribHome" class="topMenuLink" href="/redrobin/home.aspx"><img name="p_ctl00_ribHome_img" src="/Images/Shared/TopMenu/rrLogo.jpg" alt="Home" style="border-width:0px;"></a></div>
 		<div style="float:left; padding-left:11px; padding-top:0px"><a id="p_ctl00_ribCareers" class="topMenuLink" onmouseover="document.p_ctl00_ribCareers_img.src='/Images/Shared/TopMenu/careersHover.jpg';" onmouseout="document.p_ctl00_ribCareers_img.src='/Images/Shared/TopMenu/careersNormal.jpg';" href="/redrobin/home/careers.aspx"><img name="p_ctl00_ribCareers_img" src="/Images/Shared/TopMenu/careersNormal.jpg" alt="Careers" style="border-width:0px;"></a></div>
 		<div style="float:left; padding-left:8px; padding-top:0px"><a id="p_ctl00_ribTalkBiz" class="topMenuLink" onmouseover="document.p_ctl00_ribTalkBiz_img.src='/Images/Shared/TopMenu/talkbizHover.jpg';" onmouseout="document.p_ctl00_ribTalkBiz_img.src='/Images/Shared/TopMenu/talkbizNormal.jpg';" href="http://phx.corporate-ir.net/phoenix.zhtml?c=131715&amp;p=irol-irhome" target="_self"><img name="p_ctl00_ribTalkBiz_img" src="/Images/Shared/TopMenu/talkbizNormal.jpg" alt="Investor Relations" style="border-width:0px;"></a></div>
@@ -74,10 +74,11 @@ fo.write("locationsWidgetHtml");
 			</div>
 		</div><br style="clear:both;">
 		<div class="legal">
-			© 2006 Red Robin International, Inc. All Rights Reserved<br>
+			© 2007 Red Robin International, Inc. All Rights Reserved<br>
 			<a href="/home/terms-and-conditions.aspx">Terms and Conditions</a> | 
 			<a href="/home/privacy-policy.aspx">Privacy Policy</a>
 		</div>
 	</form>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"> </script> <script type="text/javascript"> _uacct = "UA-2821427-1"; urchinTracker(); </script>
 
 </body></html>
