--- a/f/fi/fil/filipinaheart.com.html
+++ b/f/fi/fil/filipinaheart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the filipinaheart.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630153306id_/http%3A//www.filipinaheart.com/Privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the filipinaheart.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227174050id_/http%3A//www.filipinaheart.com/Privacy.cfm) for the most accurate reproduction.-->
 
 <html><head><script language="JavaScript">
 <!-- Overture Services, Inc
@@ -127,7 +127,7 @@ function MM_swapImage() { //v3.0
         <td colspan="2" valign="top" class="members_pg">Member Login </td>
       </tr>
       <tr>
-        <td rowspan="2" valign="top" class="memberbox2"><!--DWLayoutEmptyCell-->&nbsp;</td><form name="CFForm_1" action="http://www.FilipinaHeart.com/Logon_Do.cfm;jsessionid=02309bfb51b7775b6877" method="post" onsubmit="return _CF_checkCFForm_1(this)"></form>
+        <td rowspan="2" valign="top" class="memberbox2"><!--DWLayoutEmptyCell-->&nbsp;</td><form name="CFForm_1" action="http://www.FilipinaHeart.com/Logon_Do.cfm;jsessionid=0230a3db4227464e5271" method="post" onsubmit="return _CF_checkCFForm_1(this)"></form>
         <td width="81" height="30" valign="middle" class="memberbox2"><span class="registration_text2">Member No. </span></td>
         <td colspan="2" align="left" valign="middle" class="memberbox2"><input name="ID" id="ID" type="text" maxlength="9" size="6"></td>
         <td width="68" valign="middle" class="memberbox2"><span class="registration_text2">Password.</span></td>
@@ -554,8 +554,8 @@ that is also Personal Information; or </p>
     <br>
   Name</strong>:	Cupid Media Pty Ltd (ACN 104 844 564), which shall include any related body corporate or associate (as those terms are defined in the Corporations Act 2001 (Cth)) of Cupid Media Pty Ltd.<br>
     <strong>Address</strong>:	PO Box 9304, Gold Coast MC Qld 9726<br>
-    Phone:	61 7 5510 3066<br>
-    <strong>Fax Number</strong>:	61 7 5574 2113<br>
+    <strong>Phone</strong>:	61 7 5571 1181<br>
+    <strong>Fax Number</strong>:	61 7 3103 4000<br>
     <strong>Email Address</strong>:	team@cupidmedia.com<br>
     <strong>Contact</strong>:	Customer Service<br>
     <br>
@@ -612,7 +612,7 @@ that is also Personal Information; or </p>
 	<table width="100%" border="0" cellpadding="0" cellspacing="0" class="bottom_box">
         <!--DWLayoutTable-->
         <tbody><tr>
-          <td width="770" height="30" align="center" valign="middle" class="bottomnav_text"> <a href="http://www.FilipinaHeart.com/About.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">About Us </a>| <a href="http://www.FilipinaHeart.com/ContactUs.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">Contact Us </a>| <a href="http://www.FilipinaHeart.com/Success.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">Success Stories </a>| <a href="http://www.cupidmedia.com/services.cfm" target="_blank" class="bottomnav">Other Sites </a>| <a href="http://www.FilipinaHeart.com/Terms_Cond.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">Terms of Use </a>| <a href="http://www.FilipinaHeart.com/Privacy.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">Privacy Statement </a>| <a href="http://www.FilipinaHeart.com/DatingSafety.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">Dating Safety </a>| <a href="http://www.FilipinaHeart.com/Sitemap.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">Site Map </a>| <a href="http://www.FilipinaHeart.com/Browse.cfm;jsessionid=02309bfb51b7775b6877" class="bottomnav">Browse</a> | <a href="http://www.cupidmedia.com" target="_blank" class="bottomnav">Corporate </a> | <a href="http://www.cupidmedia.com/affiliates/affiliates.cfm" target="blank" class="bottomnav">Affiliates</a></td>
+          <td width="770" height="30" align="center" valign="middle" class="bottomnav_text"> <a href="http://www.FilipinaHeart.com/About.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">About Us </a>| <a href="http://www.FilipinaHeart.com/ContactUs.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">Contact Us </a>| <a href="http://www.FilipinaHeart.com/Success.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">Success Stories </a>| <a href="http://www.cupidmedia.com/services.cfm" target="_blank" class="bottomnav">Other Sites </a>| <a href="http://www.FilipinaHeart.com/Terms_Cond.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">Terms of Use </a>| <a href="http://www.FilipinaHeart.com/Privacy.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">Privacy Statement </a>| <a href="http://www.FilipinaHeart.com/DatingSafety.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">Dating Safety </a>| <a href="http://www.FilipinaHeart.com/Sitemap.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">Site Map </a>| <a href="http://www.FilipinaHeart.com/Browse.cfm;jsessionid=0230a3db4227464e5271" class="bottomnav">Browse</a> | <a href="http://www.cupidmedia.com" target="_blank" class="bottomnav">Corporate </a> | <a href="http://www.cupidmedia.com/affiliates/affiliates.cfm" target="blank" class="bottomnav">Affiliates</a></td>
         </tr>
 		<tr>
           <td height="30" align="center" valign="middle" bgcolor="#FFFFFF"><span class="trademark_text">Cupid Media, the Cupid Media Logo <img src="/images/CMlogo_TM.gif" width="19" height="18"> and FilipinaHeart are trademarks of Cupid Media Pty Ltd. </span></td>
