--- a/s/si/sim/simpleology.com.html
+++ b/s/si/sim/simpleology.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the simpleology.com privacy policy that was archived on 2007-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070625150933id_/http%3A//www.simpleology.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the simpleology.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227195048id_/http%3A//www.simpleology.com/privacy.php) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -22,12 +22,17 @@
 	<table width="754" border="0" cellspacing="0" cellpadding="5" align="center">
       <tbody><tr>
         <td background="images16/content_bg_horiz.gif" style="background-position:top; background-repeat:repeat-x; height:460px; vertical-align:top;">
-		<div style="margin:15px;">
+		<style type="text/css">
+<!--
+.style1 {font-size: 11.0pt}
+-->
+</style>
+<div style="margin:15px;">
 <p align="center"><b><span style="FONT-FAMILY: Georgia">
 <font style="font-size: 20pt">Privacy Policy</font></span></b></p>
 	<p>
     <font face="Georgia">
-    <a href="http://www.truste.org/ivalidate.php?url=www.simpleology.com&amp;sealid=101"><img src="http://www.simpleology.com/images/clickseal.gif" width="91" height="73"></a></font></p>
+    <a href="http://www.truste.org/ivalidate.php?url=www.simpleology.com&amp;sealid=101"><img src="http://www.simpleology.com/images/clickseal.gif" width="68" height="95"></a></font></p>
     <span style="font-family: Georgia">
     <p class="MsoNormal"><span lang="EN-NZ" style="font-size: 11.0pt"><u>Last 
     Updated</u>: 26 April 2007</span></p>
@@ -94,11 +99,10 @@ mark@markjoyner.name</a></span> &nbsp;</span></p>
 <p class="MsoNormal"><b><span lang="EN-NZ" style="font-size: 11.0pt">If by post:</span></b></p>
 <p class="MsoNormal"><span lang="EN-NZ" style="font-size: 11.0pt">Mark Joyner, 
 Inc<br>
-593 Bear Grass Street<br>
-Las Vegas, NV 89144</span></p>
+7426 Cherry Ave,. Ste 210 #150<br>Fontana, CA 92336</span></p>
 <p class="MsoNormal"><b><span lang="EN-NZ" style="font-size: 11.0pt">If by 
 phone:</span></b></p>
-<p class="MsoNormal"><span lang="EN-NZ" style="font-size: 11.0pt">702-228-8493</span></p>
+<p class="MsoNormal style1"><span lang="EN-NZ">888-569-6376 or 888JoynerM </span></p>
 <p class="MsoNormal"><span lang="EN-NZ" style="font-size: 11.0pt">If you do not 
 receive acknowledgment of your inquiry, or if your inquiry is still not 
 satisfactorily addressed, you should then contact TRUSTe through the <b>
@@ -136,7 +140,7 @@ collected from users in the following areas of this site:</span></p>
 &nbsp;</span></p></li>
     <li>
     <p class="MsoNormal"><span lang="EN-NZ" style="font-size: 11.0pt">identify 
-    the member when they log into the <i>simple</i></span><font face="Courier New">•</font><span style="font-family: Georgia">ology 
+    the member when they log into the <i>simple</i>ology 
     WebCockpit or DesktopCockpit, and to customize their experience based on 
     what courses they have purchased; and<br>
 &nbsp;</span><span style="font-family: Georgia"></span></p></li>
@@ -606,7 +610,15 @@ urchinTracker();
   </tr>
 </tbody></table>
 </div>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
 
+_uacct = "UA-2161187-1";
+
+urchinTracker();
+
+</script> 
 
 
 </body></html>
