--- a/a/ac/acu/acunote.com.html
+++ b/a/ac/acu/acunote.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the acunote.com privacy policy that was archived on 2007-05-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070519211801id_/http%3A//acunote.com/promo/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the acunote.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227200624id_/http%3A//acunote.com/promo/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Privacy Policy</title>
 
-<link href="/stylesheets/promo/main.css?1175611418" media="screen" rel="Stylesheet" type="text/css">
-<link href="/stylesheets/promo/print.css?1166632482" media="print" rel="Stylesheet" type="text/css">
+<link href="http://asset0.acunote.com/stylesheets/promo/main.css?1198519679" media="screen" rel="Stylesheet" type="text/css">
+<link href="http://asset0.acunote.com/stylesheets/promo/print.css?1198519679" media="print" rel="Stylesheet" type="text/css">
 
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
@@ -19,24 +19,34 @@ window.ie = true
 </script><![endif]-->
 
 
-<script src="/javascripts/footer.js?1167323485" type="text/javascript"></script>
+<script src="http://asset0.acunote.com/javascripts/footer.js?1198519679" type="text/javascript"></script>
+
+
 </head>
 
 <body><a name="top"></a>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2079194-1";
+urchinTracker();
+</script>
+
 <div id="wrapper">
 
 <div id="top_wrapper">
 <div id="header_logo">
-<h2><a href="/promo"><img alt="Logo_acunote_promo" src="/images/logo_acunote_promo.gif?1167323485"></a></h2>
+<h2><a href="/promo"><img alt="Logo_acunote_promo" src="http://asset0.acunote.com/images/logo_acunote_promo.gif?1198519679"></a></h2>
 <h3>Tame the Unexpected</h3>
 </div>
 
 <div id="navigation">
 <ul>
-    <li><a href="http://acunote.com/promo" class="">Home</a></li>
-    <li><a href="http://acunote.com/tour" class="">Tour</a></li>
-    <li><a href="http://acunote.com/promo/faq" class="">FAQ</a></li>
-    <li><a href="http://acunote.com/promo/prices" class="">Signup</a></li>
+    <li><a href="http://www.acunote.com/promo" class="">Home</a></li>
+    <li><a href="http://www.acunote.com/tour/burndown" class="">Tour</a></li>
+    <li><a href="http://forum.acunote.com">Forum</a></li>
+    <li><a href="http://www.acunote.com/promo/faq" class="">FAQ</a></li>
+    <li><a href="http://www.acunote.com/promo/prices" class="">Signup</a></li>
 </ul>
 </div>
 
@@ -275,9 +285,9 @@ to your inquiry within 30 days of its receipt.</p>
 </div><!-- Wrapper ends -->
 
 <!-- Footer-->
-<div id="footer" style="position: static;">
+<div id="footer">
 <ul>
-    <li class="plu_print">Copyright © 2006, <a href="http://www.pluron.com">Pluron, Inc</a></li>
+    <li class="plu_print">Copyright © 2006-2007, <a href="http://www.pluron.com">Pluron, Inc</a></li>
     <li><a href="/promo/privacy" onclick="window.open(this.href);return false;">Privacy Policy</a></li>
     <li><a href="/promo/terms" onclick="window.open(this.href);return false;">Terms of Service</a></li>
     <li><a href="/promo/contacts">Contact</a></li>
