--- a/m/me/med/mediatraffic.com.html
+++ b/m/me/med/mediatraffic.com.html
@@ -1,11 +1,17 @@
-<!--The following is the downloaded HTML source of the mediatraffic.com privacy policy that was archived on 2007-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070605003624id_/http%3A//mediatraffic.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mediatraffic.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227203859id_/http%3A//mediatraffic.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Media Traffic</title>
 <link href="./skins/default/stylesheets/stylesheets.css" rel="stylesheet" type="text/css">
 <script src="./skins/default/scripts/AC_RunActiveContent.js" type="text/javascript"></script>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-793590-3";
+urchinTracker();
+</script>
 </head>
 
 <body>
@@ -14,51 +20,68 @@
   <div id="login">
 		<div id="login-form">
 			<form action="https://www.mediatraffic.com/manage/index.php" method="post" name="frmLogin">
-				<div id="submit"><a href="#" onclick="document.forms['frmLogin'].submit();"><img src="./skins/default/images/btn_login_sumit.png" alt="Submit" title="Submit" width="18" height="19"></a></div>
 				<div id="user">username<br><input style="border-right:#000000 1px solid; border-top:#000000 1px solid;border-left:#000000 1px solid;border-bottom: #000000 1px solid;" name="username" type="text" onfocus="this.select()" size="20"></div>
-				<div id="pass">password<br><input style="border-right:#000000 1px solid; border-top:#000000 1px solid;border-left:#000000 1px solid;border-bottom: #000000 1px solid;" name="password" type="password" onfocus="this.select()" size="20"></div>
+				<div id="pass">password<br><input onkeypress="if(event.keyCode==13){document.forms['frmLogin'].submit();};" style="border-right:#000000 1px solid; border-top:#000000 1px solid;border-left:#000000 1px solid;border-bottom: #000000 1px solid;" name="password" type="password" onfocus="this.select()" size="20"></div>
+				<div id="submit"><input type="image" src="./skins/default/images/btn_login_sumit.png" alt="Submit" title="Submit" name="Submit" width="18" height="19"></div>
 			</form>
                 		</div>
 	</div>
+
 		<ul id="nav">
-			<li id="feature"><a href="/features.php">Feature</a></li>
-			<li id="demo"><a href="/demo.php">Demo</a></li>
-			<li id="faqs"><a href="/faqs.php">FAQs</a></li>
-			<li id="register"><a href="/register.php">Register</a></li>
-			<li id="aboutus"><a href="/aboutus.php">About Us</a></li>
-			<li id="feedback"><a href="/feedback.php">Feedback</a></li>
+			<li id="feature"><a href="features.php">Feature</a></li>
+			<li id="demo"><a href="demo.php">Demo</a></li>
+			<li id="faqs"><a href="faqs.php">FAQs</a></li>
+			<li id="register"><a href="register.php">Register</a></li>
+			<li id="aboutus"><a href="aboutus.php">About Us</a></li>
+			<li><!-- BEGIN ProvideSupport.com Graphics Chat Button Code -->
+<div id="cikXX2" style="z-index:100;position:absolute; overflow:hidden;"></div><div id="sckXX2" style="display:inline"></div><div id="sdkXX2" style="display:none"><script type="text/javascript" src="https://secure.providesupport.com/image/js/mediatraffic/safe-standard.js?ps_h=kXX2&amp;ps_t=1582150980791"></script></div><script type="text/javascript">var sekXX2=document.createElement("script");sekXX2.type="text/javascript";var sekXX2s=(location.protocol.indexOf("https")==0?"https://secure.providesupport.com/image":"http://image.providesupport.com")+"/js/mediatraffic/safe-standard.js?ps_h=kXX2\u0026ps_t="+new Date().getTime();setTimeout("sekXX2.src=sekXX2s;document.getElementById('sdkXX2').appendChild(sekXX2)",1)</script><noscript><div style="display:inline"><a href="http://www.providesupport.com?messenger=mediatraffic">Online Chat</a></div></noscript>
+<!-- END ProvideSupport.com Graphics Chat Button Code --></li>
 		</ul>
 
+<script src="../skins/default/scripts/AC_RunActiveContent.js" type="text/javascript"></script>
 	<div id="col_right">
 		<div id="adv_box">
-			<div style="margin-top:4px; margin-left:4px;">
+			<div style="margin-top:4px; margin-left:5px;">
+
+<script type="text/javascript">
+AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','291','height','294','src','./skins/default/flash/testimony','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','./skins/default/flash/testimony' ); //end AC code
+</script><object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="291" height="294" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"><param name="movie" value="./skins/default/flash/testimony.swf"> <param name="quality" value="high"> <embed width="291" height="294" src="./skins/default/flash/testimony.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"></object><noscript><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="291" height="294">
+  <param name="movie" value="./skins/default/flash/testimony.swf" />
+  <param name="quality" value="high" />
+  <embed src="./skins/default/flash/testimony.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="291" height="294"></embed>
+</object></noscript>
+
+<!--
+<a href="http://www.ad-techlondon.co.uk/" target="_blank"><img src="./skins/default/images/MediaTraffic_ComeSeeUs.jpg" width="291" height="294" border="0"></a>
 			  <script type="text/javascript">
 				AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','291','height','294','src','flash/cumseeus_v03','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','./skins/default/flash/cumseeus_v03' ); //end AC code
-				</script><object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="291" height="294" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"><param name="movie" value="./skins/default/flash/cumseeus_v03.swf"> <param name="quality" value="high"> <embed width="291" height="294" src="./skins/default/flash/cumseeus_v03.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"></object>
+				</script>
 				<noscript><![CDATA[
 				<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="291" height="294">
         <param name="movie" value="./skins/default/flash/cumseeus_v03.swf" />
         <param name="quality" value="high" />
         <embed src="./skins/default/flash/cumseeus_v03.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="291" height="294"></embed>
 		    </object> ]]>
-				</noscript>
+				</noscript> -->
 			</div>
 		</div>
 
 
 		<div id="adv_box2">
 			<div style="margin-top:11px; margin-left:12px;">
-			  <script type="text/javascript">
-				AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','273','height','347','src','flash/ban_mediatext02','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','./skins/default/flash/ban_mediatext02' ); //end AC code
-				</script><object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="273" height="347" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"><param name="movie" value="./skins/default/flash/ban_mediatext02.swf"> <param name="quality" value="high"> <embed width="273" height="347" src="./skins/default/flash/ban_mediatext02.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"></object>
+
+		<script type="text/javascript">
+			AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','273','height','347','src','flash/ban_mediatext','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','./skins/default/flash/ban_mediatext' ); //end AC code
+		</script><object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="273" height="347" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"><param name="movie" value="./skins/default/flash/ban_mediatext.swf"> <param name="quality" value="high"> <embed width="273" height="347" src="./skins/default/flash/ban_mediatext.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"></object>
         <noscript><![CDATA[
         <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="273" height="347">
-        <param name="movie" value="./skins/default/flash/ban_mediatext02.swf" />
+        <param name="movie" value="./skins/default/flash/ban_mediatext.swf" />
         <param name="quality" value="high" />
-        <embed src="./skins/default/flash/ban_mediatext02.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="273" height="347"></embed>
+        <embed src="./skins/default/flash/ban_mediatext.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="273" height="347"></embed>
         </object> ]]>
         </noscript>
-        <div style="padding-top:8px;"><a href="http://vombanetwork.com/" target="_blank"><img src="./skins/default/images/ban_vombanetwork.png" alt="Drive High Quality Audience" title="Drive High Quality Audience" width="273" height="180" border="0"></a></div>
+
+	    <div style="padding-top:8px;"><a href="http://vombanetwork.com/" target="_blank"><img src="./skins/default/images/ban_vombanetwork.png" alt="Drive High Quality Audience" title="Drive High Quality Audience" width="273" height="180" border="0"></a></div>
 			</div>
 		</div>
 	</div><script src="scripts/AC_RunActiveContent.js" type="text/javascript"></script>
@@ -145,7 +168,7 @@
 			<li id="f_mediakit"><a href="/mediakit/mediakit.pdf">Media kit</a></li>
 			<li id="f_contactus"><a href="contact.php">Contact Us</a></li>
 			<li id="f_terms"><a href="terms.php">Terms &amp; Conditions </a></li>
-			<li id="f_privacy"><a href="privacy.php" class="on">Privacy policy</a></li>			
+			<li id="f_privacy"><a href="privacy.php">Privacy policy</a></li>			
 		</ul>
 	</div>
 
