nycerome.com (archived on 2007-12-27)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "travel",
  "char_count": 2762,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.36,
  "homepage_snapshot_redirected_domain": "nycerome.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001022503id_/http://www.nycerome.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001022503id_/http%3A//nycerome.com",
  "interval": "2007_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nycerome.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071227211711id_/http%3A//www.nycerome.com/nycerome-privacy.html",
  "policy_title": "Rome hotels, online reservation of hotels in Rome, Italy",
  "policy_url": "nycerome.com/nycerome-privacy.html",
  "sha1": "903d2fb7e55960ff46ffae8fac3579e2074cb57f",
  "simhash": 13675685441246083084,
  "simhash_updated": false,
  "site_hostname": "nycerome.com",
  "site_url": "http://nycerome.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071227211711",
  "word_count": 435,
  "year": 2007
}

--- a/n/ny/nyc/nycerome.com.html
+++ b/n/ny/nyc/nycerome.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the nycerome.com privacy policy that was archived on 2007-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070513074027id_/http%3A//www.nycerome.com/nycerome-privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nycerome.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227211711id_/http%3A//www.nycerome.com/nycerome-privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>Rome hotels, online reservation of  hotels in Rome, Italy</title>
+<title>Rome hotels, online reservation of hotels in Rome, Italy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="DESCRIPTION" content="Rome hotels by nyceRome, best detailed selection of hotels in Rome city center : photo galleries,maps, special offers &amp; last minute,online reservations. ">
 <meta name="KEYWORDS" content="rome hotels, hotels in rome, Rome guide, lodging, map of Rome, italy, discount hotel, Rome accommodations, special offers, last minute, rooms , hotel reservation,  hotels in spanish steps, trevi fountain, via veneto, colosseum, st peter">
@@ -94,6 +94,7 @@
               <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-rating/4-stars-hotels-in-rome.html" class="link11"><b>4 Star</b> Rome Hotels</a><br>
               <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-rating/5-stars-hotels-in-rome.html" class="link11"><b>5 
               Star</b> Rome Hotels</a><br><img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-rating/town-house-in-rome.html" class="link11"><b>Town House</b> in Rome</a><br>
+<img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-rating/apartments-in-rome.html" class="link11"><b>Apartments</b> in Rome</a><br>
               <br></td>
           </tr>
         </tbody></table>
@@ -121,13 +122,16 @@
               near <b>University</b></a><br> <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-hotels-st-john-laterano.html" class="link11">Hotels 
               near <b>Laterano</b></a><br> <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-hotels-aventino-testaccio.html" class="link11">Hotels 
               near <b>Aventino</b></a><br> <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-hotels-trastevere.html" class="link11">Hotels 
-              near <b>Trastevere</b></a><br> <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-hotels-aurelio.html" class="link11">Hotels 
-              near <b>Aurelio</b></a></td>
+              near <b>Trastevere</b></a><br>
+              <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-hotels-aurelio.html" class="link11">Hotels 
+              near <b>Aurelio</b></a>
+			  <br>
+              <img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-hotels-outside-city-center.html" class="link11">Hotels <strong>Outside City Center</strong></a></td>
           </tr>
           <tr> 
             <td height="10"></td>
           </tr>
-          <tr><td height="10" class="bloccox1t" style="padding-top:8px;padding-bottom:8px"><img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-airport-hotels.html" class="link11"><b>Rome AIRPORT HOTELS</b></a></td>
+          <tr><td height="10" class="bloccox1t" style="padding-top:8px;padding-bottom:8px"><img src="/rome-hotels-images/rome-rooms-arancio.gif" width="12" height="7"><a href="/reservation-by-location/rome-airport-hotels.html" class="link11"><b>ROME AIRPORT HOTELS</b></a></td>
           </tr>
         </tbody></table>
         <table width="100%" border="0" cellpadding="2" cellspacing="0" bgcolor="#FFFFFF">
@@ -142,8 +146,7 @@
       <td width="5" bgcolor="#FFFFFF"><img src="rome-hotels-images/px_trasp.gif" width="5" height="20"></td>
       <td rowspan="2" align="center" class="bloccox4"><table width="100%" border="0" cellspacing="0" cellpadding="2">
           <tbody><tr> 
-            <td align="center" valign="top" bgcolor="#FFFFFF" class="bloccox1b"><a href="/index.html" class="link12b">ROME 
-              HOMEPAGE</a> <span class="link12b">&gt; PRIVACY</span></td>
+            <td align="center" valign="top" bgcolor="#FFFFFF" class="bloccox1b"><span class="link11b_blu"><a href="/index.html" class="link11b_blu">ROME HOMEPAGE</a> » PRIVACY</span></td>
           </tr>
           <tr> 
             <td valign="top" bgcolor="#FFFFFF"></td>
@@ -173,7 +176,7 @@
         <td><img src="rome-hotels-images/px_trasp.gif" width="50" height="2"></td>
       </tr>
   </tbody></table>
-  <!-- #BeginLibraryItem "/Library/footer.lbi" --><table width="780" border="0" cellpadding="4" cellspacing="0" bgcolor="#FFFFFF" class="bloccox4">
+  <!-- #BeginLibraryItem "/Library/footer.lbi" --><table width="780" border="0" cellpadding="2" cellspacing="0" bgcolor="#FFFFFF" class="bloccox4">
   <tbody><tr>
     <td align="center" valign="top" class="link10b"><img src="rome-hotels-images/logo-nyceworld.gif" width="80" height="59"></td>
   </tr>
@@ -188,7 +191,7 @@
   </tr>
   <tr> 
     <td align="center" valign="top" nowrap="" class="testo9">All rights reserved 
-      © 2003 - 2007 nyceWorld Srl </td>
+      © 2003 - 2007 nyceWorld Srl</td>
   </tr>
 </tbody></table>
 <!-- #EndLibraryItem --></div>
