nodq.com (archived on 2007-12-27)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 1522,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.61,
  "homepage_snapshot_redirected_domain": "nodq.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001111831id_/http://www.nodq.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001111831id_/http%3A//nodq.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nodq.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071227234827id_/http%3A//www.nodq.com/privacy.shtml",
  "policy_title": "NoDQ.com > Privacy Policy",
  "policy_url": "nodq.com/privacy.shtml",
  "sha1": "710850f09f135409c743408452146e73ca6008bb",
  "simhash": 12594953214657269375,
  "simhash_updated": true,
  "site_hostname": "nodq.com",
  "site_url": "http://nodq.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071227234827",
  "word_count": 265,
  "year": 2007
}

--- a/n/no/nod/nodq.com.html
+++ b/n/no/nod/nodq.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nodq.com privacy policy that was archived on 2007-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070506171412id_/http%3A//nodq.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nodq.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227234827id_/http%3A//www.nodq.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>NoDQ.com &gt; Privacy Policy</title>
@@ -137,7 +137,7 @@ cursor: default;
    var uaid = now.getTime() % Math.floor(8640000 - Math.random()*1000);
    document.write('<scr'+'ipt src="http://focusin.ads.targetnet.com//ad/id=ioutlaws&opt=hjj&rw=65533&rh=65533&urlid=2&cv=220&uid=' + uaid + '" ></scr'+'ipt>');
 //-->
-</script><script src="http://focusin.ads.targetnet.com//ad/id=ioutlaws&amp;opt=hjj&amp;rw=65533&amp;rh=65533&amp;urlid=2&amp;cv=220&amp;uid=1961300"></script>
+</script><script src="http://focusin.ads.targetnet.com//ad/id=ioutlaws&amp;opt=hjj&amp;rw=65533&amp;rh=65533&amp;urlid=2&amp;cv=220&amp;uid=6837518"></script>
 <noscript>
    <iframe allowTransparency="true" src="http://focusin.ads.targetnet.com//ad/id=ioutlaws&opt=hhn&rw=65533&rh=65533&urlid=2&cv=220&uid=1" width=65533 height=65533 frameborder=0 marginheight=0 marginwidth=0 scrolling="no">
    <a href="http://focusin.ads.targetnet.com//ad/id=ioutlaws&opt=cin&rw=65533&rh=65533&urlid=2&cv=220&uid=1" target="_top"><img 
@@ -167,7 +167,7 @@ if (parseFloat(navigator.appVersion) == 0) { document.write('<IFRAME WIDTH=1 HEI
    var uaid = now.getTime() % Math.floor(8640000 - Math.random()*1000);
    document.write('<scr'+'ipt src="http://focusin.ads.targetnet.com//ad/id=ioutlaws&opt=hpj&cv=210&uid=' + uaid + '"></scr'+'ipt>');
 //-->
-</script><script src="http://focusin.ads.targetnet.com//ad/id=ioutlaws&amp;opt=hpj&amp;cv=210&amp;uid=5677737"></script>
+</script><script src="http://focusin.ads.targetnet.com//ad/id=ioutlaws&amp;opt=hpj&amp;cv=210&amp;uid=1957625"></script>
 <!------------ end of focusIN code ------------>
 
 <script language="JavaScript" src="http://focusin.ads.targetnet.com/lib/activateAllInterstitials.js"></script>
@@ -222,7 +222,7 @@ if (parseFloat(navigator.appVersion) == 0) { document.write('<IFRAME WIDTH=468 H
 <tbody><tr>
 
 <td align="right" valign="top" width="100%">
-<font size="1"><center><b><a href="javascript:window.external.AddFavorite('http://nodq.com/', 'NoDQ.com - Online Entertainment!')">BOOKMARK US</a> / <a href="/feedback.shtml">SUBMIT NEWS/RESULTS</a> / <a href="http://nodq.com/" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://nodq.com/');" onmouseout="window.status='';return true">MAKE US YOUR START PAGE</a></b></center></font>
+<font size="1"><center><b><a href="javascript:window.external.AddFavorite('http://nodq.com/', 'NoDQ.com - Online Entertainment!')">BOOKMARK US</a> / <a href="/siteinfo.shtml">SUBMIT NEWS/RESULTS</a> / <a href="http://nodq.com/" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://nodq.com/');" onmouseout="window.status='';return true">MAKE US YOUR START PAGE</a></b></center></font>
 </td>
 
 </tr>
@@ -307,30 +307,27 @@ if (parseFloat(navigator.appVersion) == 0) { document.write('<IFRAME WIDTH=468 H
 
 <center>
 
-<script language="JavaScript" type="text/javascript" src="http://www.wrestleattitude.com/ads/adx.js"></script>
-<script language="JavaScript" type="text/javascript">
-<!--
-   if (!document.phpAds_used) document.phpAds_used = ',';
-   phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
-   
-   document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
-   document.write ("http://www.wrestleattitude.com/ads/adjs.php?n=" + phpAds_random);
-   document.write ("&amp;what=zone:1");
-   document.write ("&amp;exclude=" + document.phpAds_used);
-   if (document.referrer)
-      document.write ("&amp;referer=" + escape(document.referrer));
-   document.write ("'><" + "/script>");
-//-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.wrestleattitude.com/ads/adjs.php?n=426693115&amp;what=zone:1&amp;exclude=,"></script><noscript><a href='http://www.wrestleattitude.com/ads/adclick.php?n=ae610b4e' target='_blank'><!--                                                                                               --></a></noscript>
-<br><br>
-
 <!-- ---------- Advertising.com Banner Code -------------- --> 
 <script language="JavaScript"> 
 var bnum=new Number(Math.floor(99999999 * Math.random())+1); 
 document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); 
 document.write('SRC="http://servedby.advertising.com/site=682779/size=120600/bnum='+bnum+'/optn=1"></SCR'+'IPT>'); 
-</script><script language="JavaScript" src="http://servedby.advertising.com/site=682779/size=120600/bnum=46104998/optn=1"></script> 
+</script><script language="JavaScript" src="http://servedby.advertising.com/site=682779/size=120600/bnum=8924712/optn=1"></script> 
 <!-- ---------- Copyright 2000, Advertising.com ---------- -->
+<br><br>
+<!--- start of nodq_160x600_(160x600_skyscraper)_247RealMediaAdTag --->
+<script language="JavaScript1.1" src="http://network.realmedia.com/RealMedia/ads/adstream_jx.ads/nodq/160x600/ron/ent/ss/a@x10">
+</script>
+<script language="JavaScript">
+<!--
+if (parseFloat(navigator.appVersion) == 0) { document.write('<IFRAME WIDTH=120 HEIGHT=600 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR="#000000" SRC="http://network.realmedia.com/RealMedia/ads/adstream_sx.ads/nodq/160x600/ron/ent/ss/a@x10"></iframe>');
+}
+// -->
+</script>
+<noscript>
+<A HREF="http://network.realmedia.com/RealMedia/ads/click_nx.ads/nodq/160x600/ron/ent/ss/a@x10?x"><IMG SRC="http://network.realmedia.com/RealMedia/ads/adstream_nx.ads/nodq/160x600/ron/ent/ss/a@x10"></a>
+</noscript>
+<!--- end of nodq_160x600_(160x600_skyscraper)_247RealMediaAdTag --->
 
 </center>
 
@@ -452,7 +449,7 @@ var AFS_Url="DetectUrl";
 
 <td valign="top" width="750">
 
-<center>Original content Copyright 2007 NoDQ.com Web Publishing. [ <a href="/legal.shtml">Legal Notice</a> | <a href="/privacy.shtml">Privacy Policy</a> ]
+<center>Original content Copyright 2007 NoDQ.com Web Publishing. [ <a href="/siteinfo.shtml">Legal Notice</a> | <a href="/siteinfo.shtml">Privacy Policy</a> ]
 </center>
 </td>
 
