--- a/k/kf/kfc/kfc.com.au.html
+++ b/k/kf/kfc/kfc.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kfc.com.au privacy policy that was archived on 2007-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070609103221id_/http%3A//www.kfc.com.au/Default.asp%3Fpage%3D/privacy%2Bpolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kfc.com.au privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228015201id_/http%3A//www.kfc.com.au/Default.asp%3Fpage%3D/privacy%2Bpolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -49,11 +49,6 @@
 	<div id="masthead" class="clearfix">
 
 		<div id="siteTools">
-			<ul class="clearfix">
-				<li class="first"><a href="/Default.asp?page=/site+map">Site Map</a></li>
-				<li><a href="/Default.asp?page=/careers">Careers</a></li>
-				<li style="display: none;"><a href="/Default.asp?page=/franchise+opportunities">Franchise Opportunities</a></li>
-			</ul>
 
 			<form action="" method="get" onsubmit="if(!this.elements.searchterms.value || this.elements.searchterms.value == 'Enter keyword(s)') {this.elements.searchterms.focus();return false;} else return true;">
 	<div class="clearfix">
@@ -93,6 +88,9 @@
 </li>
 <li class="topLevelNavItem" onmouseover="menuMouseOver(this);" onmouseout="menuMouseOut(this);">
 <a href="/Default.asp?page=/locations"><img src="images/nav/locations_off.gif" alt="Locations" onmouseover="imgSwap(this, 'images/nav/locations_over.gif');" onmouseout="imgRestore(this);"></a>
+</li>
+<li class="topLevelNavItem" onmouseover="menuMouseOver(this);" onmouseout="menuMouseOut(this);">
+<a href="/Default.asp?page=/careers" rel="popup"><img src="images/nav/careers_off.gif" alt="Careers" onmouseover="imgSwap(this, 'images/nav/careers_over.gif');" onmouseout="imgRestore(this);"></a>
 </li>
 <li class="topLevelNavItem" onmouseover="menuMouseOver(this);" onmouseout="menuMouseOut(this);">
 <a href="/Default.asp?page=/contact+us"><img src="images/nav/contact_off.gif" alt="Contact Us" onmouseover="imgSwap(this, 'images/nav/contact_over.gif');" onmouseout="imgRestore(this);"></a>
@@ -182,23 +180,44 @@
 		<hr class="separator">
 
 		<div id="sidebar">
-	<!-- Temporarily Removed 2007-05-11
-	<div id="sidebar_promo">
-		<a href="http://www.kfc.com.au/files/KFC_FreshIsBest_webtvc.mpeg" rel="popup"><img src="images/content/tvc2-freshisbest.jpg" alt="" id="HomePageBanner" width="215" height="192" />
-</a>
-	</div>
-	End temp removed section -->
+
+	
+
+	<div id="sidebar_cricket"><a href="http://www.stickcricket.com.au/" rel="popup">Play Stick Cricket</a></div>
+
+	
+
+	<!-- Temporarily Removed 2007-07-19
 	<div id="sidebarFlashContainer">
-	<a href="http://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=tf&amp;c=20&amp;mc=click&amp;pli=231468&amp;pi=0"><img src="images/content/KFCi1013_215x192.gif"></a>
+<a href="http://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=tf&amp;c=20&amp;mc=click&amp;pli=231468&amp;pi=0"><img src="images/content/KFCi1013_215x192.gif" id="BBPromoImage" /></a>
 </div>
 <script type="text/javascript">
-	// <![CDATA[
-	(new deconcept.SWFObject("flash/KFCI013_215x192_banner.swf", "sidebarFlash", "215", "192", "7", "#FFFFFF")).write("sidebarFlashContainer");
-	// ]]>
+// <![CDATA[
+void(function(){
+	if(window.wideBrowser) {
+		var so = new deconcept.SWFObject("flash/KFCI013_215x192_banner.swf", "sidebarFlash", "215", "192", "7", "#FFFFFF");
+		so.write("sidebarFlashContainer");
+	}
+	else if(document.body.id == 'home') {
+		var e = document.getElementById("BBPromoImage");
+		e.width = "163";
+		e.height = "146";
+		e.style.width = "163px";
+		e.style.height = "146px";
+		e.src = "images/content/KFCi1013_163x146.gif"
+	}
+}());
+// ]]>
 </script>
 
+	End temp removed section -->
 
-	<div id="sidebar_contact"><a href="/Default.asp?page=/contact+us">Drop us a line - talk to us</a></div>
+	<!-- Temporarily Removed 2007-07-17
+	<div id="sidebar_contact" class="sidebarPromo"><a href="/Default.asp?page=/contact+us">Drop us a line - talk to us</a></div>
+	End temp removed section -->
+
+	<div id="sidebar_kickstart" class="sidebarPromo"><a href="http://www.kfcjobs.com.au/" rel="popup">Kickstart your career</a></div>
+
 
 	<div id="sidebar_locator">
 		<h2>Where to find us...</h2>
@@ -232,6 +251,7 @@
 				<li class="first">© 2007 KFC</li>
 				<li> <a href="/Default.asp?page=/privacy+policy">Privacy Policy</a></li>
 				<li> <a href="/Default.asp?page=/terms+%26+conditions">Terms &amp; Conditions</a></li>
+                <li> <a href="/Default.asp?page=/site+map">Site Map</a></li>
 			</ul>
 			<ul id="footerLinks2" class="clearfix">
 				<li><a href="http://www.kfcqld.com.au/" rel="popup"><img src="images/general/footer_kfcqld.gif" alt="KFC QLD"></a></li>
@@ -249,11 +269,11 @@
 
 
 <!-- **** COUNTERS **** -->
-<!-- page object count: 17 -->
-<!-- DB Queries: 70 -->
-<!-- Page Render: 281 -->
-<!-- main: 296 -->
+<!-- page object count: 18 -->
+<!-- DB Queries: 72 -->
+<!-- Page Render: 156 -->
+<!-- main: 156 -->
 <!-- image cache hits: 0 -->
-<!-- image cache misses: 15 -->
+<!-- image cache misses: 16 -->
 <!-- **** END OF COUNTERS **** -->
 </body></html>
