--- a/k/kl/kli/klienwachter.com.html
+++ b/k/kl/kli/klienwachter.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the klienwachter.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629114808id_/http%3A//klienwachter.com/privacy_policy_statement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the klienwachter.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228031150id_/http%3A//www.klienwachter.com/privacy_policy_statement.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
