--- a/q/qw/qwe/qwest.com.html
+++ b/q/qw/qwe/qwest.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the qwest.com privacy policy that was archived on 2007-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070624063935id_/http%3A//www.qwest.com/privacy/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the qwest.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228032601id_/http%3A//www.qwest.com/privacy/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>Qwest | Legal Notices</title> 
@@ -366,7 +366,7 @@ if (qBU != "corporate") {
 	<li>
 		<b>Manage your account information by phone or through online chat</b> 
 		<br>
-		You may contact a Customer Service Representative to discuss and review the information we have in our records. You can contact online customer service directly by clicking on the "Need Help" button throughout our site or by sending an e-mail under the customer service section of the site. We will work with you so that your information is accurate and complete. Visit the <a href="http://www.qwest.com/customerService/index.html?pages=contactus">Contact Us</a> page for more information. 
+		You may contact a Customer Service Representative to discuss and review the information we have in our records. You can contact online customer service directly by clicking on the "Need Help" button throughout our site or by sending an e-mail under the customer service section of the site. We will work with you so that your information is accurate and complete. Visit the <a href="/corporate/customerService/contactus/index.html">Contact Us</a> page for more information. 
 		<br>
 		<br>
 	</li>
@@ -664,7 +664,7 @@ var locURL = path1;
 
 	}
 //-->
-</script><img src="https://102.112.2O7.net/b/ss/qwestfull/1/G.2--FB/s1580450189990?[AQB]&amp;pageName=Corporate%20%7C%20Legal%20%7C%20Customer%20Privacy%20Policy&amp;server=&amp;ch=Corporate&amp;[AQE]" height="1" width="1" border="0">
+</script><img src="https://102.112.2O7.net/b/ss/qwestfull/1/G.2--FB/s1580450190992?[AQB]&amp;pageName=Corporate%20%7C%20Legal%20%7C%20Customer%20Privacy%20Policy&amp;server=&amp;ch=Corporate&amp;[AQE]" height="1" width="1" border="0">
 <noscript><img src="https://102.112.2O7.net/b/ss/qwestfull/1/G.2-Pd-S?c10=Non%20JavaScript" alt="" height="1" width="1" border="0" /></noscript>
 <!-- End SiteCatalyst code version: G.2. -->
 
@@ -730,7 +730,7 @@ function parseQwestProfileToken(varName)
 <script language="JavaScript" type="text/javascript" src="/global/includes/lpCustomTrackingScript.js"></script>
 
 <!-- LivePerson Monitor Tag Script-->
-<script language="JavaScript" type="text/javascript" src="https://server.iad.liveperson.net/hc/78221172/x.js?cmd=file&amp;file=chatScript3&amp;site=78221172&amp;imageUrl=https://ecom.qwest.com/www/imgs/c2c/"></script>
+<script language="JavaScript" type="text/javascript" src="https://server.iad.liveperson.net/hc/78221172/x.js?cmd=file&amp;file=chatScript3&amp;site=78221172&amp;imageUrl=http://www.qwest.com/imgs/c2c/"></script>
 <!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
 
 
