--- a/a/ar/art/articleinsider.com.html
+++ b/a/ar/art/articleinsider.com.html
@@ -1,19 +1,21 @@
-<!--The following is the downloaded HTML source of the articleinsider.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629020805id_/http%3A//www.articleinsider.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articleinsider.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228044359id_/http%3A//www.articleinsider.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<meta name="Description" content="Privacy Policy">
 <title>Article Insider - Privacy Policy</title>
+<meta name="description" content="Privacy Policy">
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet" href="/themes/ai.css" type="text/css" media="screen">
 </head>
 <body>
-<div style="text-align:center;">
+<div align="center">
+<div>
 <div style="width:800px;">
+<div class="date" align="right">Thursday, December 27th, 2007</div>
 <div class="main">
 <table border="0" cellpadding="0" cellspacing="0" style="width:100%;">
 <tbody><tr>
-<td class="khaki"><a href="http://www.articleinsider.com/"><img src="/images/global/topleft.jpg" alt="Article Insider"></a></td>
+<td class="khaki"><a href="http://www.articleinsider.com/"><img src="/images/global/topleft.gif" alt="Article Insider"></a></td>
 <td rowspan="2" class="khakib">&nbsp;</td>
 <td rowspan="2" class="khaki"><img src="/images/global/topright.jpg" alt="Real People ... Sharing Real Knowledge" style="float:right;"></td>
 </tr>
@@ -31,7 +33,6 @@
 </tr>
 </tbody></table>
 <div class="inner">
-<div class="date">Thursday, June 28th, 2007</div>
 <table cellpadding="0" cellspacing="0" border="0" class="maintable">
 <tbody><tr>
 <td class="directorycell">
@@ -117,12 +118,13 @@
 </div>
 </div>
 </div>
-
+</div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-902394-1";
 urchinTracker();
 </script>
+
 
 </body></html>
