eurotax.com (archived on 2007-12-28)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6034,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.82,
  "homepage_snapshot_redirected_domain": "eurotax.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071012023502id_/http://www.eurotax.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071012023502id_/http%3A//eurotax.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "eurotax.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071228050207id_/http%3A//www.eurotax.com/index.php%3Fp%3Dprivacy%26l%3Dencm",
  "policy_title": "EurotaxGlass's - Automotive Business Intelligence",
  "policy_url": "eurotax.com/index.php?p=privacy&l=encm",
  "sha1": "a5e3cde8fc5fc554419a15b0bb25d60a1085f87f",
  "simhash": 7570128768212790327,
  "simhash_updated": false,
  "site_hostname": "eurotax.com",
  "site_url": "http://eurotax.com",
  "smog": 14.22,
  "strict_updated": false,
  "timestamp": "20071228050207",
  "word_count": 970,
  "year": 2007
}

--- a/e/eu/eur/eurotax.com.html
+++ b/e/eu/eur/eurotax.com.html
@@ -1,16 +1,17 @@
-<!--The following is the downloaded HTML source of the eurotax.com privacy policy that was archived on 2007-01-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070112025422id_/http%3A//www.eurotax.com/index.php%3Fp%3Dprivacy%26l%3Dencm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eurotax.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228050207id_/http%3A//www.eurotax.com/index.php%3Fp%3Dprivacy%26l%3Dencm) for the most accurate reproduction.-->
 
 <html><head>
+<meta name="verify-v1" content="4zpI9/w/M0oAv7FVaglxqq0gA3wgTtWCt7msARVANko=">
 <title>EurotaxGlass's - Automotive Business Intelligence</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="Date" content="1st January 2004">
 <meta name="Title" content="EurotaxGlass's - Automotive Business Intelligence">
 <meta name="author" content="EurotaxGlass's">
 <meta name="copyright" content="EurotaxGlass's">
-<meta name="description" content="EurotaxGlass’s is the product of a merger between the two companies, Eurotax AG and Glass’s Information Services Limited, and has its headquarters near Zurich, Switzerland. We have a presence in 28 European countries and Australia, operating through 20 subsidiaries and eight distribution partners.">
-<meta name="classification" content="glass's guide, Eurotaxglass, car values, Europe, cars, Autowert,  Xchange, Autocalc, Print Valuation, Print Calculation, Egis, Compare, Forecast, Market Intelligence, PartsMonitor, ClaimsControl, RepairEstimate, Consumer Web Site, Whitelabelling, Advertising, Consumers &amp; Media, Insurance Business, Retailers &amp; Services, Manufacturers &amp; Finance, Austria, Belgium, Croatia, Czech Republic, France, Germany, Greece, Hungary, Ireland, Italy, Luxembourg, Netherlands, Norway, Poland, Portugal, Slovak Republic, Slovenia, Spain, Switzerland, United Kingdom, Belarus, Bulgaria, Latvia, Lithuania, Romania, Russia, Ukraine, Australia">
-<meta name="KEYWORDS" content="glass's guide, Eurotaxglass, car values, Europe, cars, Autowert,  Xchange, Autocalc, Print Valuation, Print Calculation, Egis, Compare, Forecast, Market Intelligence, PartsMonitor, ClaimsControl, RepairEstimate, Consumer Web Site, Whitelabelling, Advertising, Consumers &amp; Media, Insurance Business, Retailers &amp; Services, Manufacturers &amp; Finance, Austria, Belgium, Croatia, Czech Republic, France, Germany, Greece, Hungary, Ireland, Italy, Luxembourg, Netherlands, Norway, Poland, Portugal, Slovak Republic, Slovenia, Spain, Switzerland, United Kingdom, Belarus, Bulgaria, Latvia, Lithuania, Romania, Russia, Ukraine, Australia">
+<meta name="description" content="EurotaxGlass’s is the product of a merger between the two companies, Eurotax AG and Glass’s Information Services Limited, and has its headquarters near Zurich, Switzerland. We have a presence in 29 European countries and Australia, operating through 20 subsidiaries and eight distribution partners.">
+<meta name="classification" content="glass's guide, Eurotaxglass, car values, Europe, cars, Autowert,  Xchange, Autocalc, Print Valuation, Print Calculation, Egis, Compare, Forecast, Market Intelligence, PartsMonitor, ClaimsControl, RepairEstimate, Consumer Web Site, Whitelabelling, Advertising, Consumers &amp; Media, Insurance Business, Retailers &amp; Services, Manufacturers &amp; Finance, Austria, Belgium, Croatia, Czech Republic, France, Germany, Greece, Hungary, Ireland, Italy, Luxembourg, Netherlands, Norway, Poland, Portugal, Slovak Republic, Slovenia, Spain, Switzerland, Turkey, United Kingdom, Belarus, Bulgaria, Latvia, Lithuania, Romania, Russia, Ukraine, Australia">
+<meta name="KEYWORDS" content="glass's guide, Eurotaxglass, car values, Europe, cars, Autowert,  Xchange, Autocalc, Print Valuation, Print Calculation, Egis, Compare, Forecast, Market Intelligence, PartsMonitor, ClaimsControl, RepairEstimate, Consumer Web Site, Whitelabelling, Advertising, Consumers &amp; Media, Insurance Business, Retailers &amp; Services, Manufacturers &amp; Finance, Austria, Belgium, Croatia, Czech Republic, France, Germany, Greece, Hungary, Ireland, Italy, Luxembourg, Netherlands, Norway, Poland, Portugal, Slovak Republic, Slovenia, Spain, Switzerland, Turkey, United Kingdom, Belarus, Bulgaria, Latvia, Lithuania, Romania, Russia, Ukraine, Australia">
 
 <script language="JavaScript" src="js/nav.js"></script>
 <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -59,7 +60,7 @@
 <option value="http://www.eurotax.bg/" target="New Browser">Bulgaria</option>
 <option value="http://www.eurotaxhrvatska.com" target="New Browser">Croatia</option>
 <option value="http://cz.eurotax.com/C/index.php" target="New Browser">Czech Republic</option>
-<option value="http://fr.eurotax.com/" target="New Browser">France</option>
+<option value="http://www.EurotaxGlass.fr" target="New Browser">France</option>
 <option value="http://b2b.schwacke.de/" target="New Browser">Germany</option>
 <option value="http://www.eurotax.gr/G/index.php" target="New Browser">Greece</option>
 <option value="http://www.eurotax.hu/" target="New Browser">Hungary</option>
@@ -79,8 +80,9 @@
 <option value="http://www.eurotax.si/" target="New Browser">Slovenia</option>
 <option value="http://es.eurotax.com/" target="New Browser">Spain</option>
 <option value="http://www.eurotaxglass.ch/" target="New Browser">Switzerland</option>
+<option value="http://www.eurotaxglass.com.tr/" target="New Browser">Turkey</option>
 <option value="index.php?p=int_sites&amp;l=encm">Ukraine</option>
-<option value="http://www.eurotaxglass.co.uk/" target="New Browser">United Kingdom</option>
+<option value="index.php?p=int_sites&amp;l=encm">Sweden</option>
 		</select></td>
 		 </tr>
 		
@@ -232,12 +234,6 @@
   </td>
  </tr>
 </tbody></table>
-
-
-<!-- AWSTATS TRACKER JAVASCRIPT START ----------------------------------------->
-<script language="javascript" src="js/awstats_misc_tracker.js"></script><img src="/js/awstats_misc_tracker.js?screen=800x600&amp;win=1366x1329&amp;cdi=24&amp;java=false&amp;shk=n&amp;fla=n&amp;rp=n&amp;mov=n&amp;wma=n&amp;pdf=n&amp;uid=awsuser_id1582146030367r3436&amp;sid=awssession_id1582146030367r3436" height="0" width="0" border="0">                                       
-<noscript><img src="js/awstats_misc_tracker.js?nojs=y" height=0 width=0 border=0 style="display: none"></noscript>
-<!-- AWSTATS TRACKER JAVASCRIPT END ------------------------------------------->
 
 
 <!------------------------------------------------------------------------------------>
