--- a/t/tc/tca/tcadmin.com.html
+++ b/t/tc/tca/tcadmin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tcadmin.com privacy policy that was archived on 2007-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070513004558id_/http%3A//www.tcadmin.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tcadmin.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228054354id_/http%3A//tcadmin.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>TCADMIN - The Game Hosting Control Panel</title>
