--- a/n/nc/ncp/ncpa.org.html
+++ b/n/nc/ncp/ncpa.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ncpa.org privacy policy that was archived on 2007-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070513181049id_/http%3A//www.ncpa.org/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ncpa.org privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228061801id_/http%3A//ncpa.org/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
